--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -8,25 +8,41 @@
     android:background="@drawable/background2">
 
     <FrameLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
         android:id="@+id/fl_container"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/bnv_main"
+        android:layout_width="match_parent"
+        android:layout_height="520dp"
+        app:layout_constraintBottom_toTopOf="@id/bnv_main"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:layout_width="0dp"
-        android:layout_height="?attr/actionBarSize"
-        android:id="@+id/bnv_main"
-        android:background="#FFFFFF"
-        android:elevation="5dp"
-        app:menu="@menu/menu_bnv"
-        app:itemIconTint="@color/selector_bnv_icon"
-        app:labelVisibilityMode="unlabeled"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="110dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="232dp"
+        android:background="@drawable/shape_title"
+        android:gravity="center"
+        android:text="@string/word_page_title"
+        android:textColor="@color/black"
+        android:fontFamily="@font/noto_bold"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:layout_width="0dp"
+            android:layout_height="?attr/actionBarSize"
+            android:id="@+id/bnv_main"
+            android:background="#FFFFFF"
+            android:elevation="5dp"
+            app:menu="@menu/menu_bnv"
+            app:itemIconTint="@color/selector_bnv_icon"
+            app:labelVisibilityMode="unlabeled"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
