--- a/app/src/main/res/menu/menu_bnv.xml
+++ b/app/src/main/res/menu/menu_bnv.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/menu_word"
-        android:icon="@drawable/ic_word"
+        android:icon="@drawable/selector_word_icon"
         android:title="@string/word_page" />
 
     <item
         android:id="@+id/menu_news"
-        android:icon="@drawable/ic_news"
+        android:icon="@drawable/selector_news_icon"
         android:title="@string/news_page" />
 
     <item
         android:id="@+id/menu_policy"
-        android:icon="@drawable/ic_policy"
+        android:icon="@drawable/selector_policy_icon"
         android:title="@string/policy_page" />
 
     <item
