--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".ui.MainActivity"
     android:background="@drawable/background2">
 
     <FrameLayout
@@ -14,10 +14,10 @@
         app:layout_constraintBottom_toTopOf="@id/bnv_main"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/pageTitle" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/pageTitle"
         android:layout_width="110dp"
         android:layout_height="45dp"
         android:layout_marginTop="24dp"
