--- a/app/src/main/res/menu/menu_bnv.xml
+++ b/app/src/main/res/menu/menu_bnv.xml
@@ -18,6 +18,6 @@
 
     <item
         android:id="@+id/menu_memo"
-        android:icon="@drawable/ic_memo"
+        android:icon="@drawable/selector_memo_icon"
         android:title="@string/memo_page" />
 </menu>
